Marked this version for translation

--- a/wiki/Sketcher_Dimension.html
+++ b/wiki/Sketcher_Dimension.html
@@ -1,9 +1,9 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sketcher Dimension</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Sketcher+Dimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Bema&szlig;en (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Bema&szlig;en (91% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher Dimension (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Sketcher: Dimensione (100% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Szkicownik: Wi&#261;zania wymiar&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="fr/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher Dimension (91% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Sketcher: Dimensione (91% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="Szkicownik: Wi&#261;zania wymiar&oacute;w (91% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="ru/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--high" title="&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088; &#1056;&#1072;&#1079;&#1084;&#1077;&#1088; (82% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="ja/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--low" title="&#12473;&#12465;&#12483;&#12481;&#12515;&#12540;&#12539;&#23544;&#27861; (9% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="ko/Sketcher_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#49828;&#52992;&#52824; &#52824;&#49688; (64% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -128,35 +128,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125101028
+Cached time: 20260125103001
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.122 seconds
+CPU time usage: 0.140 seconds
+Real time usage: 0.229 seconds
 Preprocessor visited node count: 424/1000000
 Post&#8208;expand include size: 24388/2097152 bytes
 Template argument size: 9595/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1714/5000000 bytes
+Unstrip post&#8208;expand size: 1694/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.724      1 -total
- 27.82%    4.375      1 Template:Sketcher_Tools_navi
- 25.87%    4.068      2 Template:Navigation_menu_2
- 17.10%    2.689      1 Template:GuiCommand
- 15.38%    2.418      2 Template:Value
- 13.07%    2.055      1 Template:Userdocnavi
- 10.35%    1.627      2 Template:Docnav
-  6.56%    1.032      2 Template:Incode
-  6.31%    0.992      4 Template:KEY
-  5.75%    0.904      4 Template:MenuCommand
+100.00%   34.338      1 -total
+ 25.22%    8.661      1 Template:Sketcher_Tools_navi
+ 19.86%    6.818      1 Template:GuiCommand
+ 17.35%    5.959      2 Template:Navigation_menu_2
+ 14.60%    5.012      2 Template:Docnav
+ 14.58%    5.006      2 Template:Value
+  9.65%    3.313      2 Template:Incode
+  8.54%    2.931      1 Template:Userdocnavi
+  5.78%    1.984      4 Template:MenuCommand
+  4.83%    1.658      4 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331921-0!canonical and timestamp 20260125101042 and revision id 1743554. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:331921-0!canonical and timestamp 20260125103001 and revision id 1743554. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
