--- a/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
@@ -112,12 +112,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125102141
+Cached time: 20260125103004
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.162 seconds
+CPU time usage: 0.108 seconds
+Real time usage: 0.141 seconds
 Preprocessor visited node count: 378/1000000
 Post&#8208;expand include size: 27076/2097152 bytes
 Template argument size: 10826/2097152 bytes
@@ -128,19 +128,19 @@ Unstrip post&#8208;expand size: 1399/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.559      1 -total
- 43.79%   23.451      1 Template:TechDraw_Tools_navi/fr
- 25.43%   13.620      2 Template:Navigation_menu_2
- 18.01%    9.646      1 Template:Userdocnavi/fr
-  7.41%    3.969      1 Template:Value
-  6.33%    3.392      2 Template:Docnav/fr
-  4.57%    2.450      1 Template:GuiCommand/fr
-  4.28%    2.291      1 Template:Version/fr
-  3.95%    2.117      1 Template:Caption
-  3.29%    1.762      1 Template:Incode
+100.00%   23.287      1 -total
+ 24.52%    5.710      1 Template:TechDraw_Tools_navi/fr
+ 22.74%    5.295      2 Template:Navigation_menu_2
+ 13.91%    3.240      1 Template:Userdocnavi/fr
+ 10.13%    2.358      1 Template:GuiCommand/fr
+  9.62%    2.239      1 Template:Value
+  9.41%    2.192      2 Template:Docnav/fr
+  7.94%    1.848      1 Template:Caption
+  6.01%    1.399      1 Template:Version/fr
+  5.09%    1.186      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125102141 and revision id 1743583. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125103004 and revision id 1743583. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
