Marked this version for translation

--- a/wiki/Sketcher_Workbench.html
+++ b/wiki/Sketcher_Workbench.html
@@ -6,7 +6,7 @@
 <li><a href="es/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Ambiente de trabajo Croquizador (8% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="fr/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Atelier Sketcher (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="hr/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench/hr (1% translated)" lang="hr" dir="ltr">hrvatski</a></li>
-<li><a href="it/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente Sketcher (97% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="it/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Ambiente Sketcher (96% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="hu/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="hu" dir="ltr">magyar</a></li>
 <li><a href="pl/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="&#346;rodowisko pracy Szkicownik (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
@@ -15,7 +15,7 @@
 <li><a href="sk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Pracovn&yacute; st&ocirc;l N&aacute;&#269;rtn&iacute;k (8% translated)" lang="sk" dir="ltr">sloven&#269;ina</a></li>
 <li><a href="fi/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (1% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="sv/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="cs/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--complete" title="Pracovn&iacute; plocha Sketcher (100% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="cs/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="Pracovn&iacute; plocha Sketcher (99% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="bg/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench/bg (0% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="ru/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--high" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082; Sketcher (&#1057;&#1082;&#1077;&#1090;&#1095;&#1077;&#1088;) (89% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="uk/Sketcher_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Sketcher Workbench (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -379,35 +379,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125100014
+Cached time: 20260125102725
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.445 seconds
-Real time usage: 0.522 seconds
+CPU time usage: 0.434 seconds
+Real time usage: 0.576 seconds
 Preprocessor visited node count: 1739/1000000
 Post&#8208;expand include size: 33454/2097152 bytes
 Template argument size: 9226/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4787/5000000 bytes
+Unstrip post&#8208;expand size: 4782/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.790      1 -total
- 24.44%    7.037      1 Template:Sketcher_Tools_navi
- 18.24%    5.250      2 Template:Navigation_menu_2
- 10.83%    3.119      1 Template:Userdocnavi
-  9.75%    2.806      1 Template:PropertyView
-  9.03%    2.599     36 Template:Version
-  7.20%    2.072      8 Template:VersionPlus
-  6.69%    1.925      2 Template:Docnav
-  5.37%    1.546      1 Template:Variable
-  5.28%    1.519     14 Template:KEY
+100.00%   54.534      1 -total
+ 29.84%   16.274      1 Template:TOCright
+ 17.02%    9.282      1 Template:Sketcher_Tools_navi
+ 12.25%    6.683      2 Template:Navigation_menu_2
+  8.54%    4.655      1 Template:PropertyView
+  7.73%    4.217      1 Template:Userdocnavi
+  7.17%    3.912      6 Template:Caption
+  6.61%    3.603      2 Template:Docnav
+  4.58%    2.500     14 Template:KEY
+  4.49%    2.450     36 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1578-0!canonical and timestamp 20260125100014 and revision id 1743543. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:1578-0!canonical and timestamp 20260125102725 and revision id 1743543. Rendering was triggered because: unknown
  -->
 </div>
 </div><script src="site.js"></script>
