--- a/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertChainDimension.html
@@ -14,14 +14,14 @@
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cotes verticales
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Chaine verticale de cotes
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Chaine de cotes verticales
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Chaine verticale de cotes
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -45,7 +45,7 @@
 <th class="ctOdd">Voir aussi
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">TechDraw Cotes horizontales</a>, <a href="../fr/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/fr">TechDraw Cotes inclin&eacute;es</a>
+<td class="ctEven"><a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">TechDraw Chaine horizontale de cotes</a>, <a href="../fr/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/fr">TechDraw Chaine inclin&eacute;e de cotes</a>
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
@@ -112,15 +112,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125103004
+Cached time: 20260125103218
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.108 seconds
-Real time usage: 0.141 seconds
+CPU time usage: 0.086 seconds
+Real time usage: 0.139 seconds
 Preprocessor visited node count: 378/1000000
-Post&#8208;expand include size: 27076/2097152 bytes
-Template argument size: 10826/2097152 bytes
+Post&#8208;expand include size: 27128/2097152 bytes
+Template argument size: 10878/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -128,19 +128,19 @@ Unstrip post&#8208;expand size: 1399/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.287      1 -total
- 24.52%    5.710      1 Template:TechDraw_Tools_navi/fr
- 22.74%    5.295      2 Template:Navigation_menu_2
- 13.91%    3.240      1 Template:Userdocnavi/fr
- 10.13%    2.358      1 Template:GuiCommand/fr
-  9.62%    2.239      1 Template:Value
-  9.41%    2.192      2 Template:Docnav/fr
-  7.94%    1.848      1 Template:Caption
-  6.01%    1.399      1 Template:Version/fr
-  5.09%    1.186      1 Template:Incode
+100.00%   37.736      1 -total
+ 17.15%    6.472      1 Template:TechDraw_Tools_navi/fr
+ 13.06%    4.929      1 Template:Value
+ 12.43%    4.692      2 Template:Navigation_menu_2
+ 10.71%    4.042      2 Template:Docnav/fr
+  9.96%    3.760      1 Template:Userdocnavi/fr
+  9.25%    3.491      1 Template:GuiCommand/fr
+  8.34%    3.146      1 Template:Caption
+  7.64%    2.882      1 Template:Version/fr
+  7.63%    2.880      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125103004 and revision id 1743583. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277854-0!canonical and timestamp 20260125103218 and revision id 1743648. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
