--- a/wiki/Installing_on_Linux.html
+++ b/wiki/Installing_on_Linux.html
@@ -120,9 +120,8 @@
 </pre></div>
 <div class="mw-collapsible mw-collapsed toccolours">
 <h2><span class="mw-headline" id="OpenSUSE">OpenSUSE</span></h2>
-<p>FreeCAD has been typically installed with YAST (abbr. Yet another Setup Tool) until 09/2025.
-As the code base of the tool is not really being maintained for a long time, it has been replaced by MYRLYN since 09/2025, which is a drop-in replacement.
-</p><p>FreeCAD could also be installed in any terminal/console (root rights required) with:
+<p>FreeCAD can be installed with Myrlyn (which is the replacement for YAST since September 2025).
+</p><p>FreeCAD can also be installed from the terminal/console (root rights required) with:
 </p>
 <dl><dd><div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">zypper</span> <span class="n">install</span> <span class="n">FreeCAD</span>
 </pre></div></dd></dl>
@@ -224,12 +223,12 @@ releases from the github repository. These also tend to work on most x86_64 Linu
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118043836
+Cached time: 20260125103253
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.117 seconds
-Real time usage: 0.157 seconds
+CPU time usage: 0.112 seconds
+Real time usage: 0.122 seconds
 Preprocessor visited node count: 700/1000000
 Post&#8208;expand include size: 9350/2097152 bytes
 Template argument size: 3483/2097152 bytes
@@ -240,19 +239,19 @@ Unstrip post&#8208;expand size: 12849/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.579      1 -total
- 28.66%    6.758     18 Template:Code
- 18.16%    4.282      1 Template:Userdocnavi
- 10.70%    2.522      1 Template:Navigation_menu_2
-  9.15%    2.157      2 Template:Docnav
-  6.37%    1.502     13 Template:Incode
-  6.23%    1.469      1 Template:KEY
-  5.27%    1.243      7 Template:Emphasis
-  4.71%    1.111      1 Template:Button
-  4.06%    0.958      3 Template:MenuCommand
+100.00%   26.165      1 -total
+ 26.17%    6.847     18 Template:Code
+ 15.70%    4.109      1 Template:Userdocnavi
+ 12.63%    3.305      2 Template:Docnav
+  9.00%    2.355      1 Template:Navigation_menu_2
+  6.16%    1.611     13 Template:Incode
+  5.69%    1.488      3 Template:MenuCommand
+  5.42%    1.418      1 Template:Button
+  5.17%    1.353      1 Template:KEY
+  5.08%    1.330      7 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260118043836 and revision id 1739614. Rendering was triggered because: unknown
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260125103257 and revision id 1743651. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
