--- a/wiki/fr/TechDraw_ExtensionCreateObliqueChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateObliqueChainDimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCreateObliqueChainDimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCreateObliqueChainDimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionCreateObliqueChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungSchr&auml;geMa&szlig;kette (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCreateObliqueChainDimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCreateObliqueChainDimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCreateObliqueChainDimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quote in Serie Obliqua (67% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionCreateObliqueChainDimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Seria wymiar&oacute;w uko&#347;nie (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -11,18 +11,17 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Cotes inclin&eacute;es
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Chaine inclin&eacute;e de cotes
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: cotes &rarr; Cotes inclin&eacute;es
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Chaine inclin&eacute;e de cotes
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -46,12 +45,11 @@
 <th class="ctOdd">Voir aussi
 </th></tr>
 <tr>
-<td class="ctEven"><a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">TechDraw Cotes horizontales</a>, <a href="../fr/TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension/fr">TechDraw Cotes verticales</a>,
+<td class="ctEven"><a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">TechDraw Chaine horizontale de cotes</a>, <a href="../fr/TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension/fr">TechDraw Chaine verticale de cotes</a>,
 </td></tr>
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <div class="mw-translate-fuzzy">
 <p>L'outil <b>TechDraw Cotes inclin&eacute;es</b> cr&eacute;e des cotes inclin&eacute;es en cha&icirc;ne&nbsp;: une s&eacute;quence de cotes align&eacute;es.
@@ -119,35 +117,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125103038
+Cached time: 20260125103421
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.137 seconds
-Preprocessor visited node count: 381/1000000
-Post&#8208;expand include size: 26942/2097152 bytes
-Template argument size: 10711/2097152 bytes
+CPU time usage: 0.081 seconds
+Real time usage: 0.106 seconds
+Preprocessor visited node count: 380/1000000
+Post&#8208;expand include size: 27034/2097152 bytes
+Template argument size: 10803/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1410/5000000 bytes
+Unstrip post&#8208;expand size: 1411/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.579      1 -total
- 17.92%    6.198      1 Template:TechDraw_Tools_navi/fr
- 14.78%    5.111      1 Template:Version/fr
- 13.16%    4.552      2 Template:Navigation_menu_2
- 11.01%    3.808      1 Template:Userdocnavi/fr
- 10.56%    3.651      1 Template:VersionMinus/fr
-  9.74%    3.368      1 Template:Value
-  9.54%    3.298      1 Template:GuiCommand/fr
-  8.10%    2.800      2 Template:Docnav/fr
-  6.56%    2.269      1 Template:Caption
+100.00%   26.503      1 -total
+ 19.35%    5.129      1 Template:TechDraw_Tools_navi/fr
+ 17.14%    4.542      2 Template:Navigation_menu_2
+ 15.44%    4.092      1 Template:Userdocnavi/fr
+ 12.47%    3.306      1 Template:Value
+ 11.26%    2.984      1 Template:GuiCommand/fr
+  9.72%    2.577      2 Template:Docnav/fr
+  7.32%    1.941      1 Template:Incode
+  6.95%    1.842      1 Template:VersionMinus/fr
+  6.60%    1.750      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277864-0!canonical and timestamp 20260125103038 and revision id 1733836. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277864-0!canonical and timestamp 20260125103420 and revision id 1743653. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
