Updated page TechDraw ExtensionCreateObliqueChainDimension/fr

--- a/wiki/fr/TechDraw_ExtensionCreateObliqueChainDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateObliqueChainDimension.html
@@ -51,13 +51,10 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
-<p>L'outil <b>TechDraw Cotes inclin&eacute;es</b> cr&eacute;e des cotes inclin&eacute;es en cha&icirc;ne&nbsp;: une s&eacute;quence de cotes align&eacute;es.
+<p>L'outil <b>TechDraw Chaine inclin&eacute;e de cotes</b> cr&eacute;e une cha&icirc;ne inclin&eacute;e de cotes&nbsp;: une s&eacute;quence de cotes align&eacute;es.
+</p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueChainDimensionExample.png&amp;filetimestamp=20211113173953&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueChainDimensionExample.png" decoding="async" width="350" height="228" class="mw-file-element" data-file-width="815" data-file-height="532"></a></span>
 </p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueChainDimensionExample.png&amp;filetimestamp=20211113173953&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueChainDimensionExample.png" decoding="async" width="350" height="228" class="mw-file-element" data-file-width="815" data-file-height="532"></a></span>
-</p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes cr&eacute;&eacute;es</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -117,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125103421
+Cached time: 20260125103441
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.106 seconds
-Preprocessor visited node count: 380/1000000
-Post&#8208;expand include size: 27034/2097152 bytes
-Template argument size: 10803/2097152 bytes
+CPU time usage: 0.099 seconds
+Real time usage: 0.134 seconds
+Preprocessor visited node count: 379/1000000
+Post&#8208;expand include size: 27036/2097152 bytes
+Template argument size: 10804/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -133,19 +130,19 @@ Unstrip post&#8208;expand size: 1411/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.503      1 -total
- 19.35%    5.129      1 Template:TechDraw_Tools_navi/fr
- 17.14%    4.542      2 Template:Navigation_menu_2
- 15.44%    4.092      1 Template:Userdocnavi/fr
- 12.47%    3.306      1 Template:Value
- 11.26%    2.984      1 Template:GuiCommand/fr
-  9.72%    2.577      2 Template:Docnav/fr
-  7.32%    1.941      1 Template:Incode
-  6.95%    1.842      1 Template:VersionMinus/fr
-  6.60%    1.750      1 Template:Caption
+100.00%   36.995      1 -total
+ 23.21%    8.586      1 Template:TechDraw_Tools_navi/fr
+ 18.36%    6.791      2 Template:Navigation_menu_2
+ 12.01%    4.444      1 Template:Userdocnavi/fr
+ 10.34%    3.825      1 Template:Value
+ 10.03%    3.710      1 Template:GuiCommand/fr
+  9.84%    3.640      2 Template:Docnav/fr
+  7.26%    2.687      1 Template:VersionMinus/fr
+  7.12%    2.634      1 Template:Version/fr
+  6.01%    2.225      1 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277864-0!canonical and timestamp 20260125103420 and revision id 1743653. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277864-0!canonical and timestamp 20260125103441 and revision id 1743657. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
