--- a/wiki/Installing_on_Linux.html
+++ b/wiki/Installing_on_Linux.html
@@ -222,12 +222,12 @@ releases from the github repository. These also tend to work on most x86_64 Linu
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125103532
+Cached time: 20260125103618
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.131 seconds
-Real time usage: 0.179 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.166 seconds
 Preprocessor visited node count: 700/1000000
 Post&#8208;expand include size: 9350/2097152 bytes
 Template argument size: 3483/2097152 bytes
@@ -238,19 +238,19 @@ Unstrip post&#8208;expand size: 12849/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.513      1 -total
- 36.39%    9.647     18 Template:Code
- 14.80%    3.924      1 Template:Userdocnavi
-  9.35%    2.480      1 Template:Navigation_menu_2
-  9.31%    2.467      2 Template:Docnav
-  5.74%    1.523     13 Template:Incode
-  4.53%    1.201      1 Template:KEY
-  4.23%    1.122      7 Template:Emphasis
-  4.08%    1.083      1 Template:TOCright
-  3.71%    0.984      1 Template:Button
+100.00%   41.263      1 -total
+ 28.60%   11.801     18 Template:Code
+ 15.35%    6.333      1 Template:Userdocnavi
+ 12.52%    5.166      2 Template:Docnav
+  8.22%    3.394      1 Template:Navigation_menu_2
+  6.44%    2.656      3 Template:MenuCommand
+  6.28%    2.590      1 Template:TOCright
+  6.25%    2.578     13 Template:Incode
+  6.13%    2.529      1 Template:KEY
+  5.52%    2.280      7 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260125103537 and revision id 1743658. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:199690-0!canonical and timestamp 20260125103618 and revision id 1743658. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
