Updated page TechDraw ExtensionCreateHorizCoordDimension/fr

--- a/wiki/fr/TechDraw_ExtensionCreateHorizCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizCoordDimension.html
@@ -12,7 +12,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -23,7 +22,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: cotes &rarr; Cotes parall&egrave;les horizontales
+<td class="ctEven">TechDraw &rarr; Formater/organiser les cotes &rarr; Cotes parall&egrave;les horizontales
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -52,7 +51,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Cotes parall&egrave;les horizontales</b> cr&eacute;e des cotes de coordonn&eacute;es horizontales&nbsp;: plusieurs cotes r&eacute;guli&egrave;rement espac&eacute;es partant de la m&ecirc;me ligne de base.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizCoordDimensionExample.png&amp;filetimestamp=20211113130345&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizCoordDimensionExample.png" decoding="async" width="400" height="138" class="mw-file-element" data-file-width="1081" data-file-height="373"></a></span>
@@ -118,15 +116,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125103806
+Cached time: 20260125104053
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.115 seconds
-Preprocessor visited node count: 380/1000000
-Post&#8208;expand include size: 27124/2097152 bytes
-Template argument size: 10875/2097152 bytes
+CPU time usage: 0.101 seconds
+Real time usage: 0.151 seconds
+Preprocessor visited node count: 379/1000000
+Post&#8208;expand include size: 27144/2097152 bytes
+Template argument size: 10895/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -134,19 +132,19 @@ Unstrip post&#8208;expand size: 1633/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.640      1 -total
- 30.48%    8.424      1 Template:TechDraw_Tools_navi/fr
- 18.37%    5.077      2 Template:Navigation_menu_2
- 11.94%    3.299      1 Template:Userdocnavi/fr
-  9.57%    2.646      1 Template:Value
-  9.19%    2.540      1 Template:GuiCommand/fr
-  8.72%    2.410      2 Template:Docnav/fr
-  6.26%    1.731      1 Template:Caption
-  5.68%    1.569      1 Template:Version/fr
-  5.33%    1.472      1 Template:VersionMinus/fr
+100.00%   40.810      1 -total
+ 24.25%    9.897      1 Template:TechDraw_Tools_navi/fr
+ 14.99%    6.118      2 Template:Navigation_menu_2
+ 13.46%    5.493      2 Template:Docnav/fr
+ 10.91%    4.452      1 Template:Userdocnavi/fr
+ 10.39%    4.242      1 Template:Value
+  7.92%    3.231      1 Template:Version/fr
+  7.00%    2.858      1 Template:Caption
+  6.51%    2.657      2 Template:Button
+  6.12%    2.498      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277874-0!canonical and timestamp 20260125103806 and revision id 1743689. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277874-0!canonical and timestamp 20260125104053 and revision id 1743692. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
