Updated page TechDraw ExtensionCreateHorizCoordDimension/fr

--- a/wiki/fr/TechDraw_ExtensionCreateHorizCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizCoordDimension.html
@@ -55,7 +55,7 @@
 <p>L'outil <b>TechDraw Cotes parall&egrave;les horizontales</b> cr&eacute;e des cotes de coordonn&eacute;es horizontales&nbsp;: plusieurs cotes r&eacute;guli&egrave;rement espac&eacute;es partant de la m&ecirc;me ligne de base.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizCoordDimensionExample.png&amp;filetimestamp=20211113130345&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizCoordDimensionExample.png" decoding="async" width="400" height="138" class="mw-file-element" data-file-width="1081" data-file-height="373"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes cr&eacute;&eacute;es</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -116,15 +116,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125104053
+Cached time: 20260125104103
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.151 seconds
+CPU time usage: 0.086 seconds
+Real time usage: 0.161 seconds
 Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 27144/2097152 bytes
-Template argument size: 10895/2097152 bytes
+Post&#8208;expand include size: 27146/2097152 bytes
+Template argument size: 10896/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -132,19 +132,19 @@ Unstrip post&#8208;expand size: 1633/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.810      1 -total
- 24.25%    9.897      1 Template:TechDraw_Tools_navi/fr
- 14.99%    6.118      2 Template:Navigation_menu_2
- 13.46%    5.493      2 Template:Docnav/fr
- 10.91%    4.452      1 Template:Userdocnavi/fr
- 10.39%    4.242      1 Template:Value
-  7.92%    3.231      1 Template:Version/fr
-  7.00%    2.858      1 Template:Caption
-  6.51%    2.657      2 Template:Button
-  6.12%    2.498      1 Template:GuiCommand/fr
+100.00%   43.558      1 -total
+ 36.25%   15.791      1 Template:TechDraw_Tools_navi/fr
+ 29.36%   12.787      2 Template:Navigation_menu_2
+ 10.05%    4.376      1 Template:Userdocnavi/fr
+  8.44%    3.678      1 Template:Value
+  7.59%    3.305      2 Template:Docnav/fr
+  7.50%    3.267      1 Template:GuiCommand/fr
+  6.62%    2.885      1 Template:Version/fr
+  6.47%    2.820      3 Template:MenuCommand
+  5.19%    2.262      1 Template:VersionMinus/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277874-0!canonical and timestamp 20260125104053 and revision id 1743692. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277874-0!canonical and timestamp 20260125104103 and revision id 1743694. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
