Updated page TechDraw ExtensionCreateVertCoordDimension/fr

--- a/wiki/fr/TechDraw_ExtensionCreateVertCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateVertCoordDimension.html
@@ -54,7 +54,7 @@
 <p>L'outil <b>TechDraw Cotes parall&egrave;les verticales</b> cr&eacute;e des cotes de coordonn&eacute;es verticales&nbsp;: plusieurs cotes r&eacute;guli&egrave;rement espac&eacute;es partant de la m&ecirc;me ligne de base.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertCoordDimensionExample.png&amp;filetimestamp=20211113143123&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertCoordDimensionExample.png" decoding="async" width="400" height="231" class="mw-file-element" data-file-width="762" data-file-height="440"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, les cotes cr&eacute;&eacute;es</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, les cotes cr&eacute;&eacute;es</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -115,15 +115,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125104339
+Cached time: 20260125104350
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.154 seconds
+CPU time usage: 0.081 seconds
+Real time usage: 0.173 seconds
 Preprocessor visited node count: 379/1000000
-Post&#8208;expand include size: 27173/2097152 bytes
-Template argument size: 10912/2097152 bytes
+Post&#8208;expand include size: 27175/2097152 bytes
+Template argument size: 10913/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -131,19 +131,19 @@ Unstrip post&#8208;expand size: 1419/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.381      1 -total
- 19.21%    6.798      1 Template:TechDraw_Tools_navi/fr
- 14.64%    5.180      2 Template:Navigation_menu_2
- 12.16%    4.304      1 Template:Userdocnavi/fr
- 11.85%    4.193      1 Template:Version/fr
-  9.73%    3.441      1 Template:Value
-  9.14%    3.235      2 Template:Docnav/fr
-  8.78%    3.105      3 Template:MenuCommand
-  7.82%    2.767      1 Template:GuiCommand/fr
-  7.30%    2.583      1 Template:Caption
+100.00%   58.927      1 -total
+ 18.17%   10.709      1 Template:Value
+ 17.59%   10.367      1 Template:TechDraw_Tools_navi/fr
+ 14.95%    8.807      1 Template:Version/fr
+  9.48%    5.588      1 Template:Userdocnavi/fr
+  9.34%    5.504      3 Template:MenuCommand
+  8.74%    5.150      2 Template:Navigation_menu_2
+  8.52%    5.023      1 Template:Incode
+  6.67%    3.929      2 Template:Docnav/fr
+  6.21%    3.661      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277885-0!canonical and timestamp 20260125104339 and revision id 1743741. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277885-0!canonical and timestamp 20260125104349 and revision id 1743744. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
