Updated page TechDraw ExtensionCreateHorizCoordDimension/fr

--- a/wiki/fr/TechDraw_ExtensionCreateHorizCoordDimension.html
+++ b/wiki/fr/TechDraw_ExtensionCreateHorizCoordDimension.html
@@ -63,7 +63,7 @@
 <li>S&eacute;lectionnez trois sommets ou plus.</li>
 <li>L'ordre de s&eacute;lection des deux premiers sommets d&eacute;termine la position de la ligne de base. Si le sommet s&eacute;lectionn&eacute; en premier est &agrave; gauche du second, la ligne de base est cr&eacute;&eacute;e au niveau du sommet le plus &agrave; gauche, sinon elle est cr&eacute;&eacute;e au niveau du sommet le plus &agrave; droite.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes horizontales</b> du menu d&eacute;roulant.</li>
+<ul><li><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: si la <a href="../fr/TechDraw_Preferences.html#Cotes" title="TechDraw Preferences/fr">pr&eacute;f&eacute;rence</a> <b>Outils de cotation</b> est r&eacute;gl&eacute;e sur <code>Outil unique</code> (par d&eacute;faut)&nbsp;: appuyez sur la fl&egrave;che vers le bas &agrave; droite du bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow.svg&amp;filetimestamp=20210802183935&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow.svg" decoding="async" width="8" height="16" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span></span> et s&eacute;lectionnez l'option <b><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes parall&egrave;les horizontales</b> du menu d&eacute;roulant.</li>
 <li>Si cette pr&eacute;f&eacute;rence a une valeur diff&eacute;rente (et dans <span style="font-size:small;color:blue;">version 0.21 et pr&eacute;c&eacute;dentes</span>)&nbsp;: appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizCoordDimension.svg&amp;filetimestamp=20240707201729&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizCoordDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cotes parall&egrave;les horizontales</a></span>.</li>
 <li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Formater/organiser les cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizCoordDimension.svg&amp;filetimestamp=20240707201729&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizCoordDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cotes parall&egrave;les horizontales</b> du menu.</li></ul></li>
 <li>Des cotes avec des textes de cotes centr&eacute;s sont cr&eacute;&eacute;es.</li></ol>
@@ -114,15 +114,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125104211
+Cached time: 20260125104553
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.130 seconds
+CPU time usage: 0.084 seconds
+Real time usage: 0.111 seconds
 Preprocessor visited node count: 378/1000000
-Post&#8208;expand include size: 27156/2097152 bytes
-Template argument size: 10906/2097152 bytes
+Post&#8208;expand include size: 27168/2097152 bytes
+Template argument size: 10918/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -130,19 +130,19 @@ Unstrip post&#8208;expand size: 1637/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.157      1 -total
- 29.06%    8.473      1 Template:TechDraw_Tools_navi/fr
- 22.08%    6.437      2 Template:Navigation_menu_2
- 14.03%    4.091      1 Template:Userdocnavi/fr
- 10.99%    3.205      1 Template:GuiCommand/fr
- 10.01%    2.918      2 Template:Docnav/fr
-  8.38%    2.444      1 Template:Caption
-  7.73%    2.253      1 Template:Value
-  5.88%    1.714      1 Template:Version/fr
-  4.01%    1.170      1 Template:Incode
+100.00%   26.906      1 -total
+ 25.41%    6.837      1 Template:TechDraw_Tools_navi/fr
+ 22.98%    6.183      2 Template:Navigation_menu_2
+ 15.83%    4.259      1 Template:Userdocnavi/fr
+ 12.31%    3.311      1 Template:GuiCommand/fr
+  9.91%    2.667      2 Template:Docnav/fr
+  9.21%    2.477      1 Template:Value
+  5.48%    1.474      1 Template:Incode
+  5.07%    1.364      1 Template:VersionMinus/fr
+  4.89%    1.316      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277874-0!canonical and timestamp 20260125104210 and revision id 1743739. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277874-0!canonical and timestamp 20260125104553 and revision id 1743757. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
